# HydroArray

./: .gitignore  README.md  pyproject.toml
HydroArray/: __init__.py
HydroArray/analysis/: statistics.py
HydroArray/config/: __init__.py  parameters.py  task.py
HydroArray/core/: __init__.py  containers.py
HydroArray/datasets/: __init__.py  base.py  moving_mnist.py  multi_source.py  river.py
HydroArray/datasets/basin/: __init__.py  base.py  camels_us.py
HydroArray/datasets/raster/: __init__.py  base.py
HydroArray/domain/: __init__.py  assimilation.py  calibration.py  ensemble.py  sensitivity.py
HydroArray/domain/models/: __init__.py  base.py  crest.py  factory.py  hymod.py  sac.py  xinanjiang.py
HydroArray/domain/observation/: __init__.py  waterlevel.py
HydroArray/domain/process/: __init__.py  crosssection.py  evaporation.py  runoff.py
HydroArray/domain/routing/: __init__.py  kinematic.py  linear.py  muskingum.py
HydroArray/io/: __init__.py  forcings.py  grid_reader.py
HydroArray/io/readers/: __init__.py  table_reader.py
HydroArray/ml/: __init__.py  train.py  trainer.py
HydroArray/ml/models/: __init__.py  flood_forecast.py  rainfall_runoff.py  registry.py  water_quality.py
HydroArray/plotting/: __init__.py  crosssection.py  network.py  spatial.py  styles.py  timeseries.py
HydroArray/utils/: __init__.py  config.py  constants.py  file_parser.py  logger.py  metrics.py  rounding.py  validators.py
examples/data_processing/: csv2zarr.py
examples/ml/: config_camels_us.yml  config_camels_us_中文.yml  config_convlstm.yml  train_camels_us.py  train_convlstm.py
examples/plots/: satellite-plotting.py  style_showcase.py
examples/traditional/: README.md  assimilation_ensemble_example.py  calibration_example.py  xinanjiang_example.py
(+35 files in other folders)
