[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HydroArray"
version = "0.1.0"
description = "A comprehensive hydrological data processing library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Xuanyu Chen", email = "lalluviachen@gmail.com"}
]
requires-python = ">=3.10"
keywords = ["hydrology", "water resources", "data processing", "hydroinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "xarray>=0.21",
    "rasterio>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
ml = [
    "torch>=2.0",
    "pytorch-lightning>=2.0",
]
viz = [
    "matplotlib>=3.7",
    "cartopy>=0.21",
]

[project.urls]
Homepage = "https://github.com/lava-chen/HydroArray"
Repository = "https://github.com/lava-chen/HydroArray"
Issues = "https://github.com/lava-chen/HydroArray/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["HydroArray*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
